--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Talha Imran, Talha Javaid",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.13"
