--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.13"
+    "is-empty": "^1.2.0",
+    "mongoose": "^5.12.13",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
