--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rapid-aid",
   "version": "1.0.0",
+  "proxy": "http://127.0.0.1:5000",
   "description": "Final Year Project for my BSCS Degree",
   "main": "index.js",
   "scripts": {
@@ -14,6 +15,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
