--- a/back-end/data/tasks.json
+++ b/back-end/data/tasks.json
@@ -4,34 +4,39 @@
         "budget": 1000,
         "location": "Dream Avenue, Lahore",
         "dueDate": "13 June 2021",
-        "status": "open"
+        "status": "open",
+        "imageURL": "https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"
     },
     {
         "title": "Plumber required",
         "budget": 1000,
         "location": "Walton, Lahore",
         "dueDate": "14 June 2021",
-        "status": "open"
+        "status": "open",
+        "imageURL": "https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"
     },
     {
         "title": "Water motor mechanic",
         "budget": 800,
         "location": "UET, Staff Houses Engineering University Lahore, Lahore",
         "dueDate": "13 June 2021",
-        "status": "Assigned"
+        "status": "Assigned",
+        "imageURL": "https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"
     },
     {
         "title": "A Good Cook Required",
         "budget": 1000,
         "location": "State Life Phase 1 State Life, Lahore",
         "dueDate": "13 June 2021",
-        "status": "open"
+        "status": "open",
+        "imageURL": "https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"
     },
     {
         "title": "Cleaning and wasing dishes",
         "budget": 1000,
         "location": "State Life Phase 1 State Life, Lahore",
         "dueDate": "13 June 2021",
-        "status": "open"
+        "status": "open",
+        "imageURL": "https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"
     }
 ]
