--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,8 +5,11 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.2",
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/moment": "^2.10.11",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -14,6 +17,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "date-fns": "^2.22.1",
     "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,6 +27,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
