--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vuexy-react-admin-dashboard",
   "version": "1.0.0",
+  "proxy": "http://127.0.0.1:5000",
   "private": true,
   "dependencies": {
     "@casl/ability": "5.2.2",
