--- a/front-end/package.json
+++ b/front-end/package.json
@@ -36,6 +36,7 @@
     "intl-messageformat": "7.8.4",
     "jquery": "3.5.1",
     "jsonwebtoken": "8.5.1",
+    "jwt-decode": "^3.1.2",
     "leaflet": "1.6.0",
     "moment": "2.29.1",
     "nouislider": "14.6.2",
