--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.12.13",
+    "react-bootstrap": "^1.6.1",
     "validator": "^13.6.0"
   },
   "devDependencies": {
