--- a/front-end/package.json
+++ b/front-end/package.json
@@ -39,7 +39,7 @@
     "jwt-decode": "^3.1.2",
     "leaflet": "1.6.0",
     "md5": "^2.3.0",
-    "moment": "2.29.1",
+    "moment": "^2.29.1",
     "nouislider": "14.6.2",
     "nouislider-react": "3.3.8",
     "postcss-rtl": "1.5.0",
