--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
     "mongoose": "^5.12.13",
+    "normalize-url": "^7.0.1",
     "react-bootstrap": "^1.6.1",
     "validator": "^13.6.0"
   },
