--- a/front-end/package.json
+++ b/front-end/package.json
@@ -79,6 +79,7 @@
     "redux-thunk": "2.3.0",
     "sass": "1.26.8",
     "screenfull": "5.0.2",
+    "socket.io-client": "^4.2.0",
     "sortablejs": "1.12.0",
     "styled-components": "5.1.1",
     "sweetalert2": "10.14.0",
