--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Final Year Project for my BSCS Degree",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon back-end/db.js",
+    "server": "nodemon back-end/server.js",
     "client": "npm start --prefix front-end",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "http": "0.0.1-security",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
@@ -23,6 +24,7 @@
     "mongoose": "^5.12.13",
     "normalize-url": "^7.0.1",
     "react-bootstrap": "^1.6.1",
+    "socket.io": "^4.2.0",
     "validator": "^13.6.0"
   },
   "devDependencies": {
