--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DATABASE_PASS=talha157
 SECRET_KEY=talhathevoice
 GOOGLE_API_KEY=AIzaSyD-AiYQr3D9GyTtRSrT_ONiRsyW31OCP50
 PORT=5000
+SKIP_PREFLIGHT_CHECK=true
