--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Rapid Aide - Services Provider Application",
+  "name": "rapid-aide",
   "version": "1.0.0",
   "proxy": "http://127.0.0.1:5000",
   "private": true,
