--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rapid-aid",
+  "name": "rapid-aide",
   "version": "1.0.0",
   "description": "Final Year Project for my BSCS Degree",
   "main": "index.js",
